EXTRA_DIST = \
	README \
	rt.sh run_regression.sh make.regression \
	breakpoints/16f873.lkr  breakpoints/breakpoints.asm \
	breakpoints/breakpoints.stc  breakpoints/Makefile \
	instructions_14bit/16f628.lkr instructions_14bit/instructions_14bit.asm \
	instructions_14bit/instructions_14bit.stc instructions_14bit/Makefile \
	instructions_16bit/18f452.lkr instructions_16bit/instructions_16bit.asm \
	instructions_16bit/instructions_16bit.stc instructions_16bit/Makefile \
	instructions_12bit/12c508.lkr instructions_12bit/instructions_12bit.asm \
	instructions_12bit/instructions_12bit.stc instructions_12bit/Makefile \
	node_test/16f877.lkr node_test/Makefile node_test/node_test.asm node_test/node_test.stc \
	p16f84/16f84.lkr p16f84/Makefile p16f84/p16f84.asm p16f84/p16f84.stc \
	p18f452_ports/18f452.lkr p18f452_ports/Makefile p18f452_ports/p18f452_ports.asm \
	p18f452_ports/p18f452_ports.stc \
	digital_stim/16f84.lkr digital_stim/digital_stim.asm digital_stim/digital_stim.stc \
	digital_stim/Makefile \
	register_stim/16f84.lkr register_stim/Makefile register_stim/register_stim.asm \
	register_stim/register_stim.stc \
	p12ce518/Makefile p12ce518/12ce519.lkr p12ce518/EEdriver.asm \
	p12ce518/p12ce518.asm p12ce518/p12ce518.stc \
	eeprom_wide/Makefile eeprom_wide/16f873.lkr eeprom_wide/eeprom_wide.asm \
	eeprom_wide/eeprom_wide.stc \
	interrupts_14bit/Makefile interrupts_14bit/16f84.lkr interrupts_14bit/interrupts_14bit.asm \
	interrupts_14bit/interrupts_14bit.stc \
	macro_test/Makefile macro_test/16f84.lkr macro_test/macro_test.asm \
	macro_test/macro_test.stc \
	logic_test/Makefile logic_test/16f873.lkr logic_test/logic_test.asm \
	logic_test/logic_test.stc \
	resistor/Makefile resistor/16f873.lkr resistor/resistor.asm resistor/resistor.stc \
	usart_test/Makefile usart_test/16f628.lkr usart_test/16f877.lkr \
	usart_test/usart_pir1v1.asm usart_test/usart_pir1v2.asm \
	txisr_test/Makefile txisr_test/16f871.lkr txisr_test/txisr_test.asm \
	txisr_test/txisr_test.stc \
	tmr0_16bit/Makefile tmr0_16bit/18f452.lkr tmr0_16bit/delay.asm \
	tmr0_16bit/delay.inc tmr0_16bit/tmr0_16bit.asm tmr0_16bit/tmr0_16bit.stc \
	switch_test/Makefile switch_test/16f877.lkr switch_test/switch_test.asm \
	switch_test/switch_test.stc \
	p18f/Makefile p18f/18f452.lkr p18f/extended_instructions.asm p18f/instructions.asm \
	comparator/Makefile comparator/16f628.lkr comparator/16f873a.lkr \
	comparator/16f877a.lkr comparator/compar_628.asm comparator/compar_628.stc \
	comparator/compar_873a.asm comparator/compar_873a.stc comparator/compar_877a.asm \
	comparator/compar_877a.stc \
	a2d/Makefile a2d/16c71.lkr a2d/16f871.lkr a2d/16f873a.lkr a2d/16f874a.lkr \
	a2d/16f88.lkr a2d/18f452.lkr a2d/p16c71.asm a2d/p16f871.asm \
	a2d/p16f873a.asm a2d/p16f874a.asm a2d/p16f88.asm a2d/p18f452.asm \
	a2d/16f819.lkr a2d/p16f819.asm \
	psp/Makefile psp/16f871.lkr psp/18f452.lkr psp/p16f871.asm psp/p18f452.asm \
	ttl/Makefile ttl/18f452.lkr ttl/Makefile ttl/ttl377.asm ttl/ttl377.stc \
	ccp/Makefile ccp/16f877a.lkr ccp/ccp_877a.asm ccp/ccp_877a.stc ccp/ccp.asm \
	ccp/ccp.stc ccp/pwm_877a.asm  ccp/16f819.lkr ccp/ccp_819.asm \
	wavegen/Makefile wavegen/16f877a.lkr wavegen/pulsegen.asm wavegen/pulsegen.stc \
	spi/Makefile spi/16c62.lkr spi/16f88.lkr spi/18f242.lkr spi/p16c62.asm \
	spi/p16f88.asm spi/p18f242.asm \
	i2c/16f876a.lkr i2c/16f88.lkr i2c/i2c_low.inc i2c/Makefile i2c/p16f876a.asm i2c/p16f88.asm \
	i2c/16f819.lkr i2c/p16f819.asm \
	port_stim/Makefile port_stim/18f452.lkr port_stim/Makefile port_stim/port_stim.asm \
	port_stim/port_stim.stc

MOSTLYCLEANFILES = *.hex *.cod *.lst *~
CLEANFILES = *.hex *.cod *.lst *~
DISTCLEANFILES = *.hex *.cod *.lst *~
MAINTAINERCLEANFILES = *.hex *.cod *.lst *~
