
EXTRA_DIST = \
	README \
	rt.sh run_regression.sh make.regression startup.stc \
	a2d/16f88.lkr a2d/p16f871.asm a2d/Makefile a2d/16f871.lkr \
	a2d/p16f819.asm a2d/p16f873a.asm a2d/p16f874a.asm a2d/p18f4321.asm \
	a2d/18f452.lkr a2d/16f873a.lkr a2d/16c71.lkr a2d/p18f1220.asm \
	a2d/p16c71.asm a2d/16f874a.lkr a2d/p18f452.asm a2d/18f4321.lkr \
	a2d/p16f88.asm a2d/18f1220.lkr a2d/16f819.lkr analog_stim/Makefile \
	analog_stim/18f452.lkr analog_stim/p18f452.asm assertions/Makefile \
	assertions/assertions.asm assertions/16f873.lkr breakpoints/Makefile \
	breakpoints/breakpoints.stc breakpoints/16f873.lkr \
	breakpoints/breakpoints.asm ccp/Makefile ccp/ccp.stc ccp/ccp_819.asm \
	ccp/ccp_877a.asm ccp/16f877a.lkr ccp/ccp.asm ccp/ccp_877a.stc \
	ccp/pwm_877a.asm ccp/16f819.lkr ccp_628/Makefile ccp_628/ccp_628.asm \
	ccp_628/16f628.lkr comparator/Makefile comparator/compar_628.asm \
	comparator/compar_873a.asm comparator/16f873a.lkr \
	comparator/10f204.lkr comparator/16f877a.lkr \
	comparator/compar_877a.asm comparator/compar_628.stc \
	comparator/16f628.lkr comparator/compar_10f204.asm \
	comparator/compar_873a.stc comparator/compar_877a.stc \
	digital_stim/Makefile digital_stim/16f84.lkr \
	digital_stim/digital_stim.asm digital_stim/digital_stim.stc \
	eeprom_wide/Makefile eeprom_wide/eeprom_wide.stc \
	eeprom_wide/16f873.lkr eeprom_wide/eeprom_wide.asm i2c/16f88.lkr \
	i2c/Makefile i2c/p16f819.asm  \
	i2c/i2c_low.inc i2c/p16f88.asm i2c/p16f876a.asm i2c/16f876a.lkr \
	i2c/16f819.lkr instructions_12bit/Makefile \
	instructions_12bit/instructions_12bit.stc \
	instructions_12bit/instructions_12bit.asm \
	instructions_12bit/12c508.lkr \
	instructions_14bit/instructions_14bit.stc instructions_14bit/Makefile \
	instructions_14bit/instructions_14bit.asm \
	instructions_14bit/16f628.lkr instructions_14bit/branching.asm \
	instructions_16bit/Makefile instructions_16bit/18f452.lkr \
	instructions_16bit/instructions_16bit.stc \
	instructions_16bit/instructions_16bit.asm interrupts_14bit/Makefile \
	interrupts_14bit/16f84.lkr interrupts_14bit/interrupts_14bit.asm \
	interrupts_14bit/interrupts_14bit.stc interrupts_16bit/priority.asm \
	interrupts_16bit/Makefile interrupts_16bit/18f2321.lkr \
	interrupts_16bit/priority.stc interrupts_16bit/interrupts_16bit.asm \
	interrupts_16bit/interrupts_16bit.stc logic_test/Makefile \
	logic_test/logic_test.asm logic_test/logic_test.stc \
	logic_test/16f873.lkr macro_test/Makefile macro_test/macro_test.stc \
	macro_test/16f84.lkr macro_test/macro_test.asm node_test/16f877.lkr \
	node_test/Makefile node_test/node_test.asm node_test/node_test.stc \
	p12c509/12c509.lkr p12c509/Makefile p12c509/reset.asm \
	p12c509/it_12bit.asm p12ce518/p12ce518.stc p12ce518/Makefile \
	p12ce518/p12ce518.asm p12ce518/EEdriver.asm p12ce518/12ce519.lkr \
	p16f628/p16f628.stc p16f628/p16f628.asm p16f84/Makefile \
	p16f84/p16f84.asm p16f84/16f84.lkr p16f84/reset.asm \
	p16f873/p16f873.asm p18f/Makefile p18f/instructions.asm \
	p18f/reset.asm \
	p18f/18f452.lkr p18f/extended_instructions.asm p18f452_ports/Makefile \
	p18f452_ports/p18f452_ports.asm p18f452_ports/18f452.lkr \
	p18f452_ports/p18f452_ports.stc port_stim/Makefile \
	port_stim/18f452.lkr port_stim/port_stim.stc port_stim/port_stim.asm \
	psp/p16f871.asm psp/Makefile psp/16f871.lkr psp/18f452.lkr \
	psp/p18f452.asm register_stim/Makefile register_stim/16f84.lkr \
	register_stim/register_stim.stc register_stim/register_stim.asm \
	resistor/Makefile resistor/resistor.stc resistor/resistor.asm \
	resistor/16f873.lkr  spi/16f88.lkr spi/Makefile \
	spi/18f242.lkr spi/p16f88.asm spi/p16c62.asm spi/16c62.lkr \
	spi/p18f242.asm switch_test/16f877.lkr switch_test/Makefile \
	switch_test/switch_test.stc switch_test/switch_test.asm \
	tmr0_16bit/Makefile tmr0_16bit/18f452.lkr tmr0_16bit/tmr0_16bit.stc \
	tmr0_16bit/tmr0_16bit.asm tmr0_16bit/delay.inc tmr0_16bit/delay.asm \
	tmr1_16bit/Makefile tmr1_16bit/18f452.lkr \
	tmr1_16bit/tmr1_16bit.asm tmr1_16bit/tmr1_16bit.stc ttl/Makefile \
	ttl/ttl377.asm ttl/18f452.lkr ttl/ttl377.stc txisr_test/Makefile \
	txisr_test/16f871.lkr txisr_test/txisr_test.asm \
	txisr_test/txisr_test.stc usart_test/16f877.lkr usart_test/Makefile \
	usart_test/18f2321.lkr usart_test/usart_pir1v2.asm \
	usart_test/eusart.asm usart_test/usart_pir1v1.asm \
	usart_test/16f628.lkr wavegen/Makefile wavegen/16f877a.lkr \
	wavegen/pulsegen.stc wavegen/pulsegen.asm wdt/16f88.lkr wdt/Makefile \
	wdt/18f452.lkr wdt/nwdt_16f628.asm wdt/nwdt_16c64.asm \
	wdt/wdt_18f452.asm wdt/wdt_16f88.asm wdt/nwdt_16f88.asm wdt/16c64.lkr \
	wdt/wdt_16c64.asm wdt/nwdt_18f452.asm wdt/16f628.lkr \
	wdt/wdt_16f628.asm p12f675/Makefile p12f675/12f675.lkr p12f675/p12f675.asm \
	p16f676/p16f676.asm p16f676/Makefile p16f676/16f676.lkr

MOSTLYCLEANFILES = */*.o */*.hex */*.cod */*.lst */*.log */*.map */*~ 
CLEANFILES = */*.o */*.hex */*.cod */*.lst */*.log */*.map */*~ 
DISTCLEANFILES = */*.o */*.hex */*.cod */*.lst */*.log */*.map */*~ 
MAINTAINERCLEANFILES = */*.o */*.hex */*.cod */*.lst */*.log */*.map */*~ 
