
EXTRA_DIST = \
	README \
	rt.sh run_regression.sh make.regression startup.stc \
	*/*.lkr */*.asm */*.stc */*.inc */Makefile

MOSTLYCLEANFILES = */*.o */*.hex */*.cod */*.lst */*.log */*.map */*~ 
CLEANFILES = */*.o */*.hex */*.cod */*.lst */*.log */*.map */*~ 
DISTCLEANFILES = */*.o */*.hex */*.cod */*.lst */*.log */*.map */*~ 
MAINTAINERCLEANFILES = */*.o */*.hex */*.cod */*.lst */*.log */*.map */*~ 
