## Process this file with automake to produce Makefile.in

INCLUDES = @X_CFLAGS@

lib_LTLIBRARIES = libgpsim.la
gpsimincludedir = $(includedir)/gpsim

libgpsim_la_SOURCES = \
	12bit-hexdecode.cc \
	12bit-processors.cc \
	14bit-instructions.cc \
	14bit-processors.cc \
	14bit-registers.cc \
	14bit-tmrs.cc \
	14bit-hexdecode.cc \
	16bit-instructions.cc \
	16bit-processors.cc \
	16bit-registers.cc \
	16bit-hexdecode.cc \
	16bit-tmrs.cc \
	attributes.cc \
	a2dconverter.cc \
	a2d_v2.cc \
	bitlog.cc \
	bit.cc \
	bytelog.cc \
	breakpoints.cc \
	clock_phase.cc \
	cod.cc \
	comparator.cc \
	cmd_manager.cc \
	eeprom.cc \
	errors.cc \
	i2c-ee.cc \
	fopen-path.cc \
	gpsim_object.cc \
	gpsim_time.cc \
	hexutils.cc \
	init.cc \
	intcon.cc \
	interface.cc \
	ioports.cc \
	lxt_write.c \
	modules.cc \
	os_dependent.cc \
	p12f6xx.cc \
	p12x.cc \
	p16f62x.cc \
	p16x8x.cc \
	p16f8x.cc \
	p16f88x.cc \
	p16f87x.cc \
	p16x7x.cc \
	p16x5x.cc \
	p16x6x.cc \
	p17c75x.cc \
	p18x.cc \
	packages.cc \
	pic-processor.cc \
	pic-registers.cc \
	pic-instructions.cc \
	pic-ioports.cc \
	pie.cc \
	pir.cc \
	pm_rd.cc \
	processor.cc \
	program_files.cc \
	protocol.cc \
	registers.cc \
	sim_context.cc \
	stimuli.cc \
	symbol.cc \
	tmr0.cc \
	trace.cc \
	trigger.cc \
	ttoken.cc \
	uart.cc \
	ssp.cc \
	psp.cc \
	xref.cc \
	icd.cc \
	expr.cc	\
	operator.cc \
	ui.cc \
	value.cc \
	ValueCollections.cc

gpsiminclude_HEADERS = \
	12bit-instructions.h \
	12bit-processors.h \
	14bit-instructions.h \
	14bit-processors.h \
	14bit-registers.h \
	14bit-tmrs.h \
	16bit-instructions.h \
	16bit-processors.h \
	16bit-registers.h \
	16bit-tmrs.h \
	a2dconverter.h \
	a2d_v2.h \
	attributes.h \
	bit.h \
	bitlog.h \
	breakpoints.h \
	bytelog.h \
	clock_phase.h \
	cmd_gpsim.h \
	cmd_manager.h \
	cod.h \
	comparator.h \
	eeprom.h \
	exports.h \
	hexutils.h \
	i2c-ee.h \
	fopen-path.h \
	gpsim_classes.h \
	gpsim_def.h \
	gpsim_interface.h \
	gpsim_object.h \
	gpsim_time.h \
	intcon.h \
	interface.h \
	ioports.h \
	lxt_write.h \
	modules.h \
	operator.h \
	p12f6xx.h \
	p12x.h \
	p16x5x.h \
	p16f62x.h \
	p16x6x.h \
	p16x7x.h \
	p16x8x.h \
	p16f8x.h \
	p16f88x.h \
	p16f87x.h \
	p17c75x.h \
	p18x.h \
	packages.h \
	pic-instructions.h \
	pic-packages.h \
	pic-processor.h \
	pic-registers.h \
	pic-ioports.h \
	picdis.h \
	pie.h \
	pir.h \
	pm_rd.h \
	processor.h \
	program_files.h \
	protocol.h \
	pthread-wrap.h \
	registers.h \
	rcon.h \
	sim_context.h \
	stimuli.h \
	symbol.h \
	tmr0.h \
	trace.h \
	trigger.h \
	trace_orb.h \
	ttoken.h \
	uart.h \
	xref.h \
	icd.h \
	ssp.h \
	psp.h \
	errors.h \
	expr.h \
	ui.h \
	value.h \
	ValueCollections.h



#libgpsim_la_LDFLAGS = $(shell gtk-config --libs)
libgpsim_la_LIBADD =  @X_LDFLAGS@
libgpsim_la_LDFLAGS = -lpthread

SUBDIRS = dspic

EXTRA_DIST = makefile.mingw
