## Process this file with automake to produce Makefile.in

AM_CPPFLAGS = @X_CFLAGS@
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = graphic_lcd  lcd  ds1307 ds1820 dht11

EXTRA_DIST = rs232-gen/Makefile rs232-gen/example/Makefile \
	rs232-gen/example/example.asm rs232-gen/example/example.stc \
	rs232-gen/example/README rs232-gen/README rs232-gen/rs232-gen.c
