
EXTRA_DIST = \
	analog_stim.stc analog_stim2.stc ap.stc async_pulse.stc async_stim.stc async_stim2.stc dtmf.stc \
	interrupt_test.stc iopin_stim.stc ioport_stim.stc p16c64_ccp.stc p16c64_pwm.stc \
	p16c64_test.stc p16c65_pwm.stc p16c74_pwm.stc p16c74_test.stc portc_stim.stc \
	sync_stim.stc t.stc time_test.stc \
	bcd.asm eetest.asm interrupt_test.asm iopin_stim.asm it.asm loop_test.asm \
	p16c64_ccp.asm p16c64_pwm.asm p16c64_test.asm p16c64_tmr1.asm \
	p16c65_pwm.asm p16c71_test.asm p16c74_test.asm pcl_test.asm \
	p16f877_test.asm \
	pulse_measure.asm sine.asm stim_test.asm twist.asm vertical_adder.asm wdt_test.asm \
	p16c64.inc p16c65.inc p16c71.inc p16c74.inc p16c84.inc


MOSTLYCLEANFILES = *.hex *.cod *.lst *~
CLEANFILES = *.hex *.cod *.lst *~
DISTCLEANFILES = *.hex *.cod *.lst *~
MAINTAINERCLEANFILES = *.hex *.cod *.lst *~
